--- a/package.json
+++ b/package.json
@@ -1,4 +1,12 @@
 {
+  "name": "sporty-app",
+  "version": "1.0.0",
+  "description": "Sporty App",
+  "main": "src/main.js",
+  "scripts": {
+    "start": "webpack serve --mode development",
+    "build": "webpack --mode production"
+  },
   "dependencies": {
     "axios": "^1.11.0",
     "element-ui": "^2.15.14",
