--- a/package.json
+++ b/package.json
@@ -23,11 +23,14 @@
     "core-js": "^3.45.0",
     "cross-env": "^10.0.0",
     "css-loader": "^7.1.2",
+    "dotenv-webpack": "^8.1.1",
     "eslint": "^9.33.0",
     "eslint-plugin-vue": "^10.4.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.6.3",
+    "install": "^0.13.0",
     "mini-css-extract-plugin": "^2.9.4",
+    "npm": "^11.5.2",
     "sass": "^1.90.0",
     "sass-loader": "^16.0.5",
     "style-loader": "^4.0.0",
